# freecell

./: Cargo.toml  README.md  cspell.json
src/: cardengine.rs  display.rs  interface.rs  main.rs
src/engine/: card.rs  mod.rs  undo.rs
src/engine/game/: mod.rs  test.rs
src/gamelogic/: error.rs  mod.rs  save_load.rs  undo.rs
src/gamelogic/board/: mod.rs  test.rs
src/logic/: card.rs  mod.rs  save_load.rs  undo.rs
src/logic/game/: mod.rs
