[package]
name = "freecell"
version = "0.1.0"
authors = ["Felipe Bemfica <felipe@bemfica.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clipboard = "0.5.0"
rand = "0.8.3"
rand_chacha = "0.3.0"
sdl2 = { version = "0.31.0", features = ["ttf"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
structopt = "0.3.21"
thiserror = "1.0.23"
